parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> File
Rule 1     File -> Inic BlocoInst
Rule 2     Inic -> DeclVar Inic
Rule 3     Inic -> <empty>
Rule 4     DeclVar -> INT RestoDeclInt
Rule 5     DeclVar -> FLOAT RestoDeclFloat
Rule 6     RestoDeclInt -> ID OpcDeclInt
Rule 7     RestoDeclInt -> ID RE NUM RD RestoArrayInt
Rule 8     RestoArrayInt -> IGUAL OpcDeclInt
Rule 9     RestoArrayInt -> PV
Rule 10    OpcDeclInt -> IGUAL SegueIgual
Rule 11    OpcDeclInt -> PV
Rule 12    RestoDeclFloat -> ID OpcDeclFloat
Rule 13    RestoDeclFloat -> ID RE NUM RD RestoArrayFloat
Rule 14    RestoArrayFloat -> IGUAL OpcDeclFloat
Rule 15    RestoArrayFloat -> PV
Rule 16    OpcDeclFloat -> IGUAL SegueIgual
Rule 17    OpcDeclFloat -> PV
Rule 18    SegueIgual -> NUM PV
Rule 19    SegueIgual -> REAL PV
Rule 20    BlocoInst -> Inst BlocoInst
Rule 21    BlocoInst -> <empty>
Rule 22    Inst -> Atribuicao
Rule 23    Inst -> Printf
Rule 24    Inst -> Scanf
Rule 25    Inst -> If
Rule 26    Inst -> DoWhile
Rule 27    Atribuicao -> ID IGUAL RestoAtrib
Rule 28    Atribuicao -> ID RE NUM RD IGUAL RestoAtrib
Rule 29    Atribuicao -> ID RE ID RD IGUAL RestoAtrib
Rule 30    RestoAtrib -> Exp ADD Exp PV
Rule 31    RestoAtrib -> Exp SUB Exp PV
Rule 32    RestoAtrib -> Exp PV
Rule 33    Exp -> Exp2 MUL Exp2
Rule 34    Exp -> Exp2 DIV Exp2
Rule 35    Exp -> Exp2 MOD Exp2
Rule 36    Exp -> Exp2
Rule 37    Exp2 -> ID
Rule 38    Exp2 -> NUM
Rule 39    Exp2 -> REAL
Rule 40    Exp2 -> ID RE NUM RD
Rule 41    Exp2 -> ID RE ID RD
Rule 42    Printf -> PRINT PE TEXT RestoPrintf
Rule 43    RestoPrintf -> PD PV
Rule 44    RestoPrintf -> VIR ContPrintf
Rule 45    ContPrintf -> ID PD PV
Rule 46    ContPrintf -> ID RE NUM RD PD PV
Rule 47    ContPrintf -> ID RE ID RD PD PV
Rule 48    Scanf -> SCAN PE TEXT VIR RestoScanf
Rule 49    RestoScanf -> ENDID PD PV
Rule 50    RestoScanf -> ENDID RE NUM RD PD PV
Rule 51    RestoScanf -> ENDID RE ID RD PD PV
Rule 52    If -> IF Cond CE BlocoInstIf CD
Rule 53    Cond -> PE Conta ExpRel Conta PD
Rule 54    Cond -> Conta
Rule 55    ExpRel -> GT
Rule 56    ExpRel -> GE
Rule 57    ExpRel -> LT
Rule 58    ExpRel -> LE
Rule 59    ExpRel -> EQ
Rule 60    ExpRel -> DIF
Rule 61    Conta -> PE Conta2 PD
Rule 62    Conta -> Conta2
Rule 63    Conta2 -> Exp SUB Exp
Rule 64    Conta2 -> Exp ADD Exp
Rule 65    Conta2 -> Exp
Rule 66    BlocoInstIf -> InstBlocoIf BlocoInstIf
Rule 67    BlocoInstIf -> <empty>
Rule 68    InstBlocoIf -> Atribuicao
Rule 69    InstBlocoIf -> Printf
Rule 70    InstBlocoIf -> Scanf
Rule 71    InstBlocoIf -> If
Rule 72    DoWhile -> DO CE BlocoDoWhile CD WHILE CondDo PV
Rule 73    BlocoDoWhile -> InstBlocoDo BlocoDoWhile
Rule 74    BlocoDoWhile -> <empty>
Rule 75    InstBlocoDo -> Atribuicao
Rule 76    InstBlocoDo -> Printf
Rule 77    InstBlocoDo -> Scanf
Rule 78    InstBlocoDo -> If
Rule 79    CondDo -> PE Conta ExpRelDo Conta PD
Rule 80    CondDo -> Conta
Rule 81    ExpRelDo -> GT
Rule 82    ExpRelDo -> GE
Rule 83    ExpRelDo -> LT
Rule 84    ExpRelDo -> LE
Rule 85    ExpRelDo -> EQ
Rule 86    ExpRelDo -> DIF

Terminals, with rules where they appear

ADD                  : 30 64
CD                   : 52 72
CE                   : 52 72
DIF                  : 60 86
DIV                  : 34
DO                   : 72
ENDID                : 49 50 51
EQ                   : 59 85
FLOAT                : 5
GE                   : 56 82
GT                   : 55 81
ID                   : 6 7 12 13 27 28 29 29 37 40 41 41 45 46 47 47 51
IF                   : 52
IGUAL                : 8 10 14 16 27 28 29
INT                  : 4
LE                   : 58 84
LT                   : 57 83
MOD                  : 35
MUL                  : 33
NUM                  : 7 13 18 28 38 40 46 50
PD                   : 43 45 46 47 49 50 51 53 61 79
PE                   : 42 48 53 61 79
PRINT                : 42
PV                   : 9 11 15 17 18 19 30 31 32 43 45 46 47 49 50 51 72
RD                   : 7 13 28 29 40 41 46 47 50 51
RE                   : 7 13 28 29 40 41 46 47 50 51
REAL                 : 19 39
SCAN                 : 48
SUB                  : 31 63
TEXT                 : 42 48
VIR                  : 44 48
WHILE                : 72
error                : 

Nonterminals, with rules where they appear

Atribuicao           : 22 68 75
BlocoDoWhile         : 72 73
BlocoInst            : 1 20
BlocoInstIf          : 52 66
Cond                 : 52
CondDo               : 72
ContPrintf           : 44
Conta                : 53 53 54 79 79 80
Conta2               : 61 62
DeclVar              : 2
DoWhile              : 26
Exp                  : 30 30 31 31 32 63 63 64 64 65
Exp2                 : 33 33 34 34 35 35 36
ExpRel               : 53
ExpRelDo             : 79
File                 : 0
If                   : 25 71 78
Inic                 : 1 2
Inst                 : 20
InstBlocoDo          : 73
InstBlocoIf          : 66
OpcDeclFloat         : 12 14
OpcDeclInt           : 6 8
Printf               : 23 69 76
RestoArrayFloat      : 13
RestoArrayInt        : 7
RestoAtrib           : 27 28 29
RestoDeclFloat       : 5
RestoDeclInt         : 4
RestoPrintf          : 42
RestoScanf           : 48
Scanf                : 24 70 77
SegueIgual           : 10 16

Parsing method: LALR

state 0

    (0) S' -> . File
    (1) File -> . Inic BlocoInst
    (2) Inic -> . DeclVar Inic
    (3) Inic -> .
    (4) DeclVar -> . INT RestoDeclInt
    (5) DeclVar -> . FLOAT RestoDeclFloat

    ID              reduce using rule 3 (Inic -> .)
    PRINT           reduce using rule 3 (Inic -> .)
    SCAN            reduce using rule 3 (Inic -> .)
    IF              reduce using rule 3 (Inic -> .)
    DO              reduce using rule 3 (Inic -> .)
    $end            reduce using rule 3 (Inic -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    File                           shift and go to state 1
    Inic                           shift and go to state 2
    DeclVar                        shift and go to state 3

state 1

    (0) S' -> File .



state 2

    (1) File -> Inic . BlocoInst
    (20) BlocoInst -> . Inst BlocoInst
    (21) BlocoInst -> .
    (22) Inst -> . Atribuicao
    (23) Inst -> . Printf
    (24) Inst -> . Scanf
    (25) Inst -> . If
    (26) Inst -> . DoWhile
    (27) Atribuicao -> . ID IGUAL RestoAtrib
    (28) Atribuicao -> . ID RE NUM RD IGUAL RestoAtrib
    (29) Atribuicao -> . ID RE ID RD IGUAL RestoAtrib
    (42) Printf -> . PRINT PE TEXT RestoPrintf
    (48) Scanf -> . SCAN PE TEXT VIR RestoScanf
    (52) If -> . IF Cond CE BlocoInstIf CD
    (72) DoWhile -> . DO CE BlocoDoWhile CD WHILE CondDo PV

    $end            reduce using rule 21 (BlocoInst -> .)
    ID              shift and go to state 13
    PRINT           shift and go to state 14
    SCAN            shift and go to state 15
    IF              shift and go to state 16
    DO              shift and go to state 17

    BlocoInst                      shift and go to state 6
    Inst                           shift and go to state 7
    Atribuicao                     shift and go to state 8
    Printf                         shift and go to state 9
    Scanf                          shift and go to state 10
    If                             shift and go to state 11
    DoWhile                        shift and go to state 12

state 3

    (2) Inic -> DeclVar . Inic
    (2) Inic -> . DeclVar Inic
    (3) Inic -> .
    (4) DeclVar -> . INT RestoDeclInt
    (5) DeclVar -> . FLOAT RestoDeclFloat

    ID              reduce using rule 3 (Inic -> .)
    PRINT           reduce using rule 3 (Inic -> .)
    SCAN            reduce using rule 3 (Inic -> .)
    IF              reduce using rule 3 (Inic -> .)
    DO              reduce using rule 3 (Inic -> .)
    $end            reduce using rule 3 (Inic -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    DeclVar                        shift and go to state 3
    Inic                           shift and go to state 18

state 4

    (4) DeclVar -> INT . RestoDeclInt
    (6) RestoDeclInt -> . ID OpcDeclInt
    (7) RestoDeclInt -> . ID RE NUM RD RestoArrayInt

    ID              shift and go to state 20

    RestoDeclInt                   shift and go to state 19

state 5

    (5) DeclVar -> FLOAT . RestoDeclFloat
    (12) RestoDeclFloat -> . ID OpcDeclFloat
    (13) RestoDeclFloat -> . ID RE NUM RD RestoArrayFloat

    ID              shift and go to state 22

    RestoDeclFloat                 shift and go to state 21

state 6

    (1) File -> Inic BlocoInst .

    $end            reduce using rule 1 (File -> Inic BlocoInst .)


state 7

    (20) BlocoInst -> Inst . BlocoInst
    (20) BlocoInst -> . Inst BlocoInst
    (21) BlocoInst -> .
    (22) Inst -> . Atribuicao
    (23) Inst -> . Printf
    (24) Inst -> . Scanf
    (25) Inst -> . If
    (26) Inst -> . DoWhile
    (27) Atribuicao -> . ID IGUAL RestoAtrib
    (28) Atribuicao -> . ID RE NUM RD IGUAL RestoAtrib
    (29) Atribuicao -> . ID RE ID RD IGUAL RestoAtrib
    (42) Printf -> . PRINT PE TEXT RestoPrintf
    (48) Scanf -> . SCAN PE TEXT VIR RestoScanf
    (52) If -> . IF Cond CE BlocoInstIf CD
    (72) DoWhile -> . DO CE BlocoDoWhile CD WHILE CondDo PV

    $end            reduce using rule 21 (BlocoInst -> .)
    ID              shift and go to state 13
    PRINT           shift and go to state 14
    SCAN            shift and go to state 15
    IF              shift and go to state 16
    DO              shift and go to state 17

    Inst                           shift and go to state 7
    BlocoInst                      shift and go to state 23
    Atribuicao                     shift and go to state 8
    Printf                         shift and go to state 9
    Scanf                          shift and go to state 10
    If                             shift and go to state 11
    DoWhile                        shift and go to state 12

state 8

    (22) Inst -> Atribuicao .

    ID              reduce using rule 22 (Inst -> Atribuicao .)
    PRINT           reduce using rule 22 (Inst -> Atribuicao .)
    SCAN            reduce using rule 22 (Inst -> Atribuicao .)
    IF              reduce using rule 22 (Inst -> Atribuicao .)
    DO              reduce using rule 22 (Inst -> Atribuicao .)
    $end            reduce using rule 22 (Inst -> Atribuicao .)


state 9

    (23) Inst -> Printf .

    ID              reduce using rule 23 (Inst -> Printf .)
    PRINT           reduce using rule 23 (Inst -> Printf .)
    SCAN            reduce using rule 23 (Inst -> Printf .)
    IF              reduce using rule 23 (Inst -> Printf .)
    DO              reduce using rule 23 (Inst -> Printf .)
    $end            reduce using rule 23 (Inst -> Printf .)


state 10

    (24) Inst -> Scanf .

    ID              reduce using rule 24 (Inst -> Scanf .)
    PRINT           reduce using rule 24 (Inst -> Scanf .)
    SCAN            reduce using rule 24 (Inst -> Scanf .)
    IF              reduce using rule 24 (Inst -> Scanf .)
    DO              reduce using rule 24 (Inst -> Scanf .)
    $end            reduce using rule 24 (Inst -> Scanf .)


state 11

    (25) Inst -> If .

    ID              reduce using rule 25 (Inst -> If .)
    PRINT           reduce using rule 25 (Inst -> If .)
    SCAN            reduce using rule 25 (Inst -> If .)
    IF              reduce using rule 25 (Inst -> If .)
    DO              reduce using rule 25 (Inst -> If .)
    $end            reduce using rule 25 (Inst -> If .)


state 12

    (26) Inst -> DoWhile .

    ID              reduce using rule 26 (Inst -> DoWhile .)
    PRINT           reduce using rule 26 (Inst -> DoWhile .)
    SCAN            reduce using rule 26 (Inst -> DoWhile .)
    IF              reduce using rule 26 (Inst -> DoWhile .)
    DO              reduce using rule 26 (Inst -> DoWhile .)
    $end            reduce using rule 26 (Inst -> DoWhile .)


state 13

    (27) Atribuicao -> ID . IGUAL RestoAtrib
    (28) Atribuicao -> ID . RE NUM RD IGUAL RestoAtrib
    (29) Atribuicao -> ID . RE ID RD IGUAL RestoAtrib

    IGUAL           shift and go to state 24
    RE              shift and go to state 25


state 14

    (42) Printf -> PRINT . PE TEXT RestoPrintf

    PE              shift and go to state 26


state 15

    (48) Scanf -> SCAN . PE TEXT VIR RestoScanf

    PE              shift and go to state 27


state 16

    (52) If -> IF . Cond CE BlocoInstIf CD
    (53) Cond -> . PE Conta ExpRel Conta PD
    (54) Cond -> . Conta
    (61) Conta -> . PE Conta2 PD
    (62) Conta -> . Conta2
    (63) Conta2 -> . Exp SUB Exp
    (64) Conta2 -> . Exp ADD Exp
    (65) Conta2 -> . Exp
    (33) Exp -> . Exp2 MUL Exp2
    (34) Exp -> . Exp2 DIV Exp2
    (35) Exp -> . Exp2 MOD Exp2
    (36) Exp -> . Exp2
    (37) Exp2 -> . ID
    (38) Exp2 -> . NUM
    (39) Exp2 -> . REAL
    (40) Exp2 -> . ID RE NUM RD
    (41) Exp2 -> . ID RE ID RD

    PE              shift and go to state 29
    ID              shift and go to state 34
    NUM             shift and go to state 35
    REAL            shift and go to state 36

    Cond                           shift and go to state 28
    Conta                          shift and go to state 30
    Conta2                         shift and go to state 31
    Exp                            shift and go to state 32
    Exp2                           shift and go to state 33

state 17

    (72) DoWhile -> DO . CE BlocoDoWhile CD WHILE CondDo PV

    CE              shift and go to state 37


state 18

    (2) Inic -> DeclVar Inic .

    ID              reduce using rule 2 (Inic -> DeclVar Inic .)
    PRINT           reduce using rule 2 (Inic -> DeclVar Inic .)
    SCAN            reduce using rule 2 (Inic -> DeclVar Inic .)
    IF              reduce using rule 2 (Inic -> DeclVar Inic .)
    DO              reduce using rule 2 (Inic -> DeclVar Inic .)
    $end            reduce using rule 2 (Inic -> DeclVar Inic .)


state 19

    (4) DeclVar -> INT RestoDeclInt .

    INT             reduce using rule 4 (DeclVar -> INT RestoDeclInt .)
    FLOAT           reduce using rule 4 (DeclVar -> INT RestoDeclInt .)
    ID              reduce using rule 4 (DeclVar -> INT RestoDeclInt .)
    PRINT           reduce using rule 4 (DeclVar -> INT RestoDeclInt .)
    SCAN            reduce using rule 4 (DeclVar -> INT RestoDeclInt .)
    IF              reduce using rule 4 (DeclVar -> INT RestoDeclInt .)
    DO              reduce using rule 4 (DeclVar -> INT RestoDeclInt .)
    $end            reduce using rule 4 (DeclVar -> INT RestoDeclInt .)


state 20

    (6) RestoDeclInt -> ID . OpcDeclInt
    (7) RestoDeclInt -> ID . RE NUM RD RestoArrayInt
    (10) OpcDeclInt -> . IGUAL SegueIgual
    (11) OpcDeclInt -> . PV

    RE              shift and go to state 39
    IGUAL           shift and go to state 40
    PV              shift and go to state 41

    OpcDeclInt                     shift and go to state 38

state 21

    (5) DeclVar -> FLOAT RestoDeclFloat .

    INT             reduce using rule 5 (DeclVar -> FLOAT RestoDeclFloat .)
    FLOAT           reduce using rule 5 (DeclVar -> FLOAT RestoDeclFloat .)
    ID              reduce using rule 5 (DeclVar -> FLOAT RestoDeclFloat .)
    PRINT           reduce using rule 5 (DeclVar -> FLOAT RestoDeclFloat .)
    SCAN            reduce using rule 5 (DeclVar -> FLOAT RestoDeclFloat .)
    IF              reduce using rule 5 (DeclVar -> FLOAT RestoDeclFloat .)
    DO              reduce using rule 5 (DeclVar -> FLOAT RestoDeclFloat .)
    $end            reduce using rule 5 (DeclVar -> FLOAT RestoDeclFloat .)


state 22

    (12) RestoDeclFloat -> ID . OpcDeclFloat
    (13) RestoDeclFloat -> ID . RE NUM RD RestoArrayFloat
    (16) OpcDeclFloat -> . IGUAL SegueIgual
    (17) OpcDeclFloat -> . PV

    RE              shift and go to state 43
    IGUAL           shift and go to state 44
    PV              shift and go to state 45

    OpcDeclFloat                   shift and go to state 42

state 23

    (20) BlocoInst -> Inst BlocoInst .

    $end            reduce using rule 20 (BlocoInst -> Inst BlocoInst .)


state 24

    (27) Atribuicao -> ID IGUAL . RestoAtrib
    (30) RestoAtrib -> . Exp ADD Exp PV
    (31) RestoAtrib -> . Exp SUB Exp PV
    (32) RestoAtrib -> . Exp PV
    (33) Exp -> . Exp2 MUL Exp2
    (34) Exp -> . Exp2 DIV Exp2
    (35) Exp -> . Exp2 MOD Exp2
    (36) Exp -> . Exp2
    (37) Exp2 -> . ID
    (38) Exp2 -> . NUM
    (39) Exp2 -> . REAL
    (40) Exp2 -> . ID RE NUM RD
    (41) Exp2 -> . ID RE ID RD

    ID              shift and go to state 34
    NUM             shift and go to state 35
    REAL            shift and go to state 36

    RestoAtrib                     shift and go to state 46
    Exp                            shift and go to state 47
    Exp2                           shift and go to state 33

state 25

    (28) Atribuicao -> ID RE . NUM RD IGUAL RestoAtrib
    (29) Atribuicao -> ID RE . ID RD IGUAL RestoAtrib

    NUM             shift and go to state 49
    ID              shift and go to state 48


state 26

    (42) Printf -> PRINT PE . TEXT RestoPrintf

    TEXT            shift and go to state 50


state 27

    (48) Scanf -> SCAN PE . TEXT VIR RestoScanf

    TEXT            shift and go to state 51


state 28

    (52) If -> IF Cond . CE BlocoInstIf CD

    CE              shift and go to state 52


state 29

    (53) Cond -> PE . Conta ExpRel Conta PD
    (61) Conta -> PE . Conta2 PD
    (61) Conta -> . PE Conta2 PD
    (62) Conta -> . Conta2
    (63) Conta2 -> . Exp SUB Exp
    (64) Conta2 -> . Exp ADD Exp
    (65) Conta2 -> . Exp
    (33) Exp -> . Exp2 MUL Exp2
    (34) Exp -> . Exp2 DIV Exp2
    (35) Exp -> . Exp2 MOD Exp2
    (36) Exp -> . Exp2
    (37) Exp2 -> . ID
    (38) Exp2 -> . NUM
    (39) Exp2 -> . REAL
    (40) Exp2 -> . ID RE NUM RD
    (41) Exp2 -> . ID RE ID RD

    PE              shift and go to state 53
    ID              shift and go to state 34
    NUM             shift and go to state 35
    REAL            shift and go to state 36

    Conta                          shift and go to state 54
    Conta2                         shift and go to state 55
    Exp                            shift and go to state 32
    Exp2                           shift and go to state 33

state 30

    (54) Cond -> Conta .

    CE              reduce using rule 54 (Cond -> Conta .)


state 31

    (62) Conta -> Conta2 .

    CE              reduce using rule 62 (Conta -> Conta2 .)
    PD              reduce using rule 62 (Conta -> Conta2 .)
    PV              reduce using rule 62 (Conta -> Conta2 .)


state 32

    (63) Conta2 -> Exp . SUB Exp
    (64) Conta2 -> Exp . ADD Exp
    (65) Conta2 -> Exp .

    SUB             shift and go to state 56
    ADD             shift and go to state 57
    CE              reduce using rule 65 (Conta2 -> Exp .)
    PD              reduce using rule 65 (Conta2 -> Exp .)
    GT              reduce using rule 65 (Conta2 -> Exp .)
    GE              reduce using rule 65 (Conta2 -> Exp .)
    LT              reduce using rule 65 (Conta2 -> Exp .)
    LE              reduce using rule 65 (Conta2 -> Exp .)
    EQ              reduce using rule 65 (Conta2 -> Exp .)
    DIF             reduce using rule 65 (Conta2 -> Exp .)
    PV              reduce using rule 65 (Conta2 -> Exp .)


state 33

    (33) Exp -> Exp2 . MUL Exp2
    (34) Exp -> Exp2 . DIV Exp2
    (35) Exp -> Exp2 . MOD Exp2
    (36) Exp -> Exp2 .

    MUL             shift and go to state 58
    DIV             shift and go to state 59
    MOD             shift and go to state 60
    SUB             reduce using rule 36 (Exp -> Exp2 .)
    ADD             reduce using rule 36 (Exp -> Exp2 .)
    CE              reduce using rule 36 (Exp -> Exp2 .)
    PV              reduce using rule 36 (Exp -> Exp2 .)
    PD              reduce using rule 36 (Exp -> Exp2 .)
    GT              reduce using rule 36 (Exp -> Exp2 .)
    GE              reduce using rule 36 (Exp -> Exp2 .)
    LT              reduce using rule 36 (Exp -> Exp2 .)
    LE              reduce using rule 36 (Exp -> Exp2 .)
    EQ              reduce using rule 36 (Exp -> Exp2 .)
    DIF             reduce using rule 36 (Exp -> Exp2 .)


state 34

    (37) Exp2 -> ID .
    (40) Exp2 -> ID . RE NUM RD
    (41) Exp2 -> ID . RE ID RD

    MUL             reduce using rule 37 (Exp2 -> ID .)
    DIV             reduce using rule 37 (Exp2 -> ID .)
    MOD             reduce using rule 37 (Exp2 -> ID .)
    SUB             reduce using rule 37 (Exp2 -> ID .)
    ADD             reduce using rule 37 (Exp2 -> ID .)
    CE              reduce using rule 37 (Exp2 -> ID .)
    PV              reduce using rule 37 (Exp2 -> ID .)
    PD              reduce using rule 37 (Exp2 -> ID .)
    GT              reduce using rule 37 (Exp2 -> ID .)
    GE              reduce using rule 37 (Exp2 -> ID .)
    LT              reduce using rule 37 (Exp2 -> ID .)
    LE              reduce using rule 37 (Exp2 -> ID .)
    EQ              reduce using rule 37 (Exp2 -> ID .)
    DIF             reduce using rule 37 (Exp2 -> ID .)
    RE              shift and go to state 61


state 35

    (38) Exp2 -> NUM .

    MUL             reduce using rule 38 (Exp2 -> NUM .)
    DIV             reduce using rule 38 (Exp2 -> NUM .)
    MOD             reduce using rule 38 (Exp2 -> NUM .)
    SUB             reduce using rule 38 (Exp2 -> NUM .)
    ADD             reduce using rule 38 (Exp2 -> NUM .)
    CE              reduce using rule 38 (Exp2 -> NUM .)
    PV              reduce using rule 38 (Exp2 -> NUM .)
    PD              reduce using rule 38 (Exp2 -> NUM .)
    GT              reduce using rule 38 (Exp2 -> NUM .)
    GE              reduce using rule 38 (Exp2 -> NUM .)
    LT              reduce using rule 38 (Exp2 -> NUM .)
    LE              reduce using rule 38 (Exp2 -> NUM .)
    EQ              reduce using rule 38 (Exp2 -> NUM .)
    DIF             reduce using rule 38 (Exp2 -> NUM .)


state 36

    (39) Exp2 -> REAL .

    MUL             reduce using rule 39 (Exp2 -> REAL .)
    DIV             reduce using rule 39 (Exp2 -> REAL .)
    MOD             reduce using rule 39 (Exp2 -> REAL .)
    SUB             reduce using rule 39 (Exp2 -> REAL .)
    ADD             reduce using rule 39 (Exp2 -> REAL .)
    CE              reduce using rule 39 (Exp2 -> REAL .)
    PV              reduce using rule 39 (Exp2 -> REAL .)
    PD              reduce using rule 39 (Exp2 -> REAL .)
    GT              reduce using rule 39 (Exp2 -> REAL .)
    GE              reduce using rule 39 (Exp2 -> REAL .)
    LT              reduce using rule 39 (Exp2 -> REAL .)
    LE              reduce using rule 39 (Exp2 -> REAL .)
    EQ              reduce using rule 39 (Exp2 -> REAL .)
    DIF             reduce using rule 39 (Exp2 -> REAL .)


state 37

    (72) DoWhile -> DO CE . BlocoDoWhile CD WHILE CondDo PV
    (73) BlocoDoWhile -> . InstBlocoDo BlocoDoWhile
    (74) BlocoDoWhile -> .
    (75) InstBlocoDo -> . Atribuicao
    (76) InstBlocoDo -> . Printf
    (77) InstBlocoDo -> . Scanf
    (78) InstBlocoDo -> . If
    (27) Atribuicao -> . ID IGUAL RestoAtrib
    (28) Atribuicao -> . ID RE NUM RD IGUAL RestoAtrib
    (29) Atribuicao -> . ID RE ID RD IGUAL RestoAtrib
    (42) Printf -> . PRINT PE TEXT RestoPrintf
    (48) Scanf -> . SCAN PE TEXT VIR RestoScanf
    (52) If -> . IF Cond CE BlocoInstIf CD

    CD              reduce using rule 74 (BlocoDoWhile -> .)
    ID              shift and go to state 13
    PRINT           shift and go to state 14
    SCAN            shift and go to state 15
    IF              shift and go to state 16

    BlocoDoWhile                   shift and go to state 62
    InstBlocoDo                    shift and go to state 63
    Atribuicao                     shift and go to state 64
    Printf                         shift and go to state 65
    Scanf                          shift and go to state 66
    If                             shift and go to state 67

state 38

    (6) RestoDeclInt -> ID OpcDeclInt .

    INT             reduce using rule 6 (RestoDeclInt -> ID OpcDeclInt .)
    FLOAT           reduce using rule 6 (RestoDeclInt -> ID OpcDeclInt .)
    ID              reduce using rule 6 (RestoDeclInt -> ID OpcDeclInt .)
    PRINT           reduce using rule 6 (RestoDeclInt -> ID OpcDeclInt .)
    SCAN            reduce using rule 6 (RestoDeclInt -> ID OpcDeclInt .)
    IF              reduce using rule 6 (RestoDeclInt -> ID OpcDeclInt .)
    DO              reduce using rule 6 (RestoDeclInt -> ID OpcDeclInt .)
    $end            reduce using rule 6 (RestoDeclInt -> ID OpcDeclInt .)


state 39

    (7) RestoDeclInt -> ID RE . NUM RD RestoArrayInt

    NUM             shift and go to state 68


state 40

    (10) OpcDeclInt -> IGUAL . SegueIgual
    (18) SegueIgual -> . NUM PV
    (19) SegueIgual -> . REAL PV

    NUM             shift and go to state 70
    REAL            shift and go to state 71

    SegueIgual                     shift and go to state 69

state 41

    (11) OpcDeclInt -> PV .

    INT             reduce using rule 11 (OpcDeclInt -> PV .)
    FLOAT           reduce using rule 11 (OpcDeclInt -> PV .)
    ID              reduce using rule 11 (OpcDeclInt -> PV .)
    PRINT           reduce using rule 11 (OpcDeclInt -> PV .)
    SCAN            reduce using rule 11 (OpcDeclInt -> PV .)
    IF              reduce using rule 11 (OpcDeclInt -> PV .)
    DO              reduce using rule 11 (OpcDeclInt -> PV .)
    $end            reduce using rule 11 (OpcDeclInt -> PV .)


state 42

    (12) RestoDeclFloat -> ID OpcDeclFloat .

    INT             reduce using rule 12 (RestoDeclFloat -> ID OpcDeclFloat .)
    FLOAT           reduce using rule 12 (RestoDeclFloat -> ID OpcDeclFloat .)
    ID              reduce using rule 12 (RestoDeclFloat -> ID OpcDeclFloat .)
    PRINT           reduce using rule 12 (RestoDeclFloat -> ID OpcDeclFloat .)
    SCAN            reduce using rule 12 (RestoDeclFloat -> ID OpcDeclFloat .)
    IF              reduce using rule 12 (RestoDeclFloat -> ID OpcDeclFloat .)
    DO              reduce using rule 12 (RestoDeclFloat -> ID OpcDeclFloat .)
    $end            reduce using rule 12 (RestoDeclFloat -> ID OpcDeclFloat .)


state 43

    (13) RestoDeclFloat -> ID RE . NUM RD RestoArrayFloat

    NUM             shift and go to state 72


state 44

    (16) OpcDeclFloat -> IGUAL . SegueIgual
    (18) SegueIgual -> . NUM PV
    (19) SegueIgual -> . REAL PV

    NUM             shift and go to state 70
    REAL            shift and go to state 71

    SegueIgual                     shift and go to state 73

state 45

    (17) OpcDeclFloat -> PV .

    INT             reduce using rule 17 (OpcDeclFloat -> PV .)
    FLOAT           reduce using rule 17 (OpcDeclFloat -> PV .)
    ID              reduce using rule 17 (OpcDeclFloat -> PV .)
    PRINT           reduce using rule 17 (OpcDeclFloat -> PV .)
    SCAN            reduce using rule 17 (OpcDeclFloat -> PV .)
    IF              reduce using rule 17 (OpcDeclFloat -> PV .)
    DO              reduce using rule 17 (OpcDeclFloat -> PV .)
    $end            reduce using rule 17 (OpcDeclFloat -> PV .)


state 46

    (27) Atribuicao -> ID IGUAL RestoAtrib .

    ID              reduce using rule 27 (Atribuicao -> ID IGUAL RestoAtrib .)
    PRINT           reduce using rule 27 (Atribuicao -> ID IGUAL RestoAtrib .)
    SCAN            reduce using rule 27 (Atribuicao -> ID IGUAL RestoAtrib .)
    IF              reduce using rule 27 (Atribuicao -> ID IGUAL RestoAtrib .)
    DO              reduce using rule 27 (Atribuicao -> ID IGUAL RestoAtrib .)
    $end            reduce using rule 27 (Atribuicao -> ID IGUAL RestoAtrib .)
    CD              reduce using rule 27 (Atribuicao -> ID IGUAL RestoAtrib .)


state 47

    (30) RestoAtrib -> Exp . ADD Exp PV
    (31) RestoAtrib -> Exp . SUB Exp PV
    (32) RestoAtrib -> Exp . PV

    ADD             shift and go to state 74
    SUB             shift and go to state 76
    PV              shift and go to state 75


state 48

    (29) Atribuicao -> ID RE ID . RD IGUAL RestoAtrib

    RD              shift and go to state 77


state 49

    (28) Atribuicao -> ID RE NUM . RD IGUAL RestoAtrib

    RD              shift and go to state 78


state 50

    (42) Printf -> PRINT PE TEXT . RestoPrintf
    (43) RestoPrintf -> . PD PV
    (44) RestoPrintf -> . VIR ContPrintf

    PD              shift and go to state 80
    VIR             shift and go to state 81

    RestoPrintf                    shift and go to state 79

state 51

    (48) Scanf -> SCAN PE TEXT . VIR RestoScanf

    VIR             shift and go to state 82


state 52

    (52) If -> IF Cond CE . BlocoInstIf CD
    (66) BlocoInstIf -> . InstBlocoIf BlocoInstIf
    (67) BlocoInstIf -> .
    (68) InstBlocoIf -> . Atribuicao
    (69) InstBlocoIf -> . Printf
    (70) InstBlocoIf -> . Scanf
    (71) InstBlocoIf -> . If
    (27) Atribuicao -> . ID IGUAL RestoAtrib
    (28) Atribuicao -> . ID RE NUM RD IGUAL RestoAtrib
    (29) Atribuicao -> . ID RE ID RD IGUAL RestoAtrib
    (42) Printf -> . PRINT PE TEXT RestoPrintf
    (48) Scanf -> . SCAN PE TEXT VIR RestoScanf
    (52) If -> . IF Cond CE BlocoInstIf CD

    CD              reduce using rule 67 (BlocoInstIf -> .)
    ID              shift and go to state 13
    PRINT           shift and go to state 14
    SCAN            shift and go to state 15
    IF              shift and go to state 16

    BlocoInstIf                    shift and go to state 83
    InstBlocoIf                    shift and go to state 84
    Atribuicao                     shift and go to state 85
    Printf                         shift and go to state 86
    Scanf                          shift and go to state 87
    If                             shift and go to state 88

state 53

    (61) Conta -> PE . Conta2 PD
    (63) Conta2 -> . Exp SUB Exp
    (64) Conta2 -> . Exp ADD Exp
    (65) Conta2 -> . Exp
    (33) Exp -> . Exp2 MUL Exp2
    (34) Exp -> . Exp2 DIV Exp2
    (35) Exp -> . Exp2 MOD Exp2
    (36) Exp -> . Exp2
    (37) Exp2 -> . ID
    (38) Exp2 -> . NUM
    (39) Exp2 -> . REAL
    (40) Exp2 -> . ID RE NUM RD
    (41) Exp2 -> . ID RE ID RD

    ID              shift and go to state 34
    NUM             shift and go to state 35
    REAL            shift and go to state 36

    Conta2                         shift and go to state 89
    Exp                            shift and go to state 32
    Exp2                           shift and go to state 33

state 54
